// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot — disabled 1`] = `
<div>
  <label
    htmlFor="1"
  >
    <span
      className="block text-small font-semibold "
    >
      Description
    </span>
    <textarea
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-gray-200 cursor-not-allowed mb-[-0.3rem]"
      defaultValue="Arya"
      disabled={true}
      id="1"
    />
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-true-gray-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      Tell us a story
    </span>
  </div>
</div>
`;

exports[`snapshot — error 1`] = `
<div>
  <label
    htmlFor="1"
  >
    <span
      className="block text-small font-semibold text-red-500"
    >
      Description
    </span>
    <textarea
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-red-300 bg-white mb-[-0.3rem]"
      id="1"
    />
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-red-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      Description must contain at least 3 dragon references
    </span>
  </div>
</div>
`;

exports[`snapshot — helptext 1`] = `
<div>
  <label
    htmlFor="1"
  >
    <span
      className="block text-small font-semibold "
    >
      Description
    </span>
    <textarea
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white mb-[-0.3rem]"
      defaultValue="Arya"
      id="1"
    />
  </label>
  <div
    className="flex mt-1 items-center space-x-1 text-true-gray-500"
  >
    <svg
      aria-hidden="true"
      className="w-4"
      fill="currentColor"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="block text-xs"
    >
      Tell us a story
    </span>
  </div>
</div>
`;

exports[`snapshot — vanilla 1`] = `
<div>
  <label
    htmlFor="1"
  >
    <span
      className="block text-small font-semibold "
    >
      Description *
    </span>
    <textarea
      className="mt-1 border rounded px-2 py-1 w-full text-regular border-true-gray-300 bg-white mb-[-0.3rem]"
      id="1"
      placeholder="Lorem ipsum dolor sit amet, consectetur adipisicing elit..."
      required={true}
    />
  </label>
</div>
`;
